# fibernavigator

./: .editorconfig  .gitignore  README.rst  index.html  install.txt
diplom/: .cproject  .project  Anatomy.cpp  Anatomy.h  AnatomyHelper.cpp  AnatomyHelper.h  ArcBall.cpp  ArcBall.h  CMakeLists.txt  DatasetHelper.cpp  DatasetHelper.h  GLHelper.cpp  GLHelper.h  KdTree.cpp  KdTree.h  MyGLCanvas.cpp  MyGLCanvas.h  Shader.cpp  Shader.h  ShaderHelper.cpp  ShaderHelper.h  aaa.yav  aaaa.yav  boundingBox.cpp  boundingBox.h  curves.cpp  curves.h  datasetInfo.cpp  datasetInfo.h  diplom.vcproj  fggdh  fibers.cpp  fibers.h  main.cpp  main.h  mainCanvas.cpp  mainCanvas.h  mainFrame.cpp  mainFrame.h  mainWindow.cpp  (+34 more)
diplom/Fantom/: FArray.cc  FArray.cpp  FArray.h  FArray.hh  FArray.icc  FBSpline.cc  FBSpline.cpp  FBSpline.hh  FBSplineSurface.cc  FBSplineSurface.hh  FException.cc  FMath.cc  FMath.cpp  FMath.h  FMath.hh  FMatrix.cc  FMatrix.cpp  FMatrix.h  FMatrix.hh  FMatrix.icc  FMultiIndex.cc  FMultiIndex.hh  FRefArray.cc  FRefArray.h  FRefArray.hh  FRefArray.icc  FTensor.cc  FTensor.cpp  FTensor.h  FTensor.hh  FTensor.icc  FVector.hh  FtQLiAlgorithm.h  FtQLiAlgorithm.hh
diplom/GLSL/: GLSLShader.cpp  GLSLShader.h  GLSLShaderProgram.cpp  GLSLShaderProgram.h  advection.fs  advection.vs  anatomy.fs  anatomy.vs  clipping.fs  clipping.vs  edgedetection.fs  edgedetection.vs  f1.glsl  f2.glsl  f3.glsl  fake-tubes.fs  fake-tubes.vs  fibers.fs  fibers.vs  functions.fs  isoSurf.fs  legend.fs  legend.vs  lighting.fs  lighting.vs  mesh.fs  mesh.vs  splineSurf.fs  splineSurf.vs  transform.fs  transform.vs  v2.glsl  vectors.vs
diplom/IsoSurface/: CIsoSurface.cpp  CIsoSurface.h  Vector.cpp  Vectors.cpp  loopSubD.cpp  loopSubD.h  point3D.cpp  triangleMesh.cpp  triangleMesh.h
diplom/dataset/: Anatomy.cpp  Anatomy.h  AnatomyHelper.cpp  AnatomyHelper.h  DatasetHelper.cpp  DatasetHelper.h  KdTree.h  datasetInfo.h  fibers.cpp  fibers.h  mesh.cpp  mesh.h  splinePoint.cpp  splinePoint.h  surface.cpp  surface.h
diplom/gfx/: Shader.cpp  ShaderHelper.cpp  ShaderHelper.h  theScene.cpp  theScene.h
diplom/gui/: ArcBall.cpp  boundingBox.cpp  boundingBox.h  mainCanvas.cpp  mainFrame.cpp  mainFrame.h  myListCtrl.cpp  selectionBox.cpp  selectionBox.h
diplom/icons/: alphablend.xpm  box.xpm  boxw.xpm  delete.xpm  eyes.xpm  fileopen.xpm  gball.xpm  layout.xpm  lightbulb.xpm  mini_cat.xpm  toggleOverlay.xpm  toggleRGB.xpm  toggleSurface.xpm  view1.xpm  view3.xpm
diplom/lic/: FStreamlineOnSurfaceEuler.cpp  FStreamlineOnSurfaceEuler.h  FgeFramebufferObject.h  FgeGLTexture.cpp  FgeGLTexture.h  FgeImageSpaceLIC.cpp  FgeImageSpaceLIC.h  FgeOffscreen.cpp  FgeOffscreen.h  FgeRenderbuffer.h  SurfaceLIC.cpp  SurfaceLIC.h  TensorField.cpp  TensorField.h
diplom/misc/Fantom/: FArray.icc  FException.h  FIndex.cpp  FIndex.icc  FMatrix.cpp  FRefArray.cpp
diplom/misc/IsoSurface/: CIsoSurface.cpp  CIsoSurface.h  Vector.h  loopSubD.cpp  triangleMesh.cpp  triangleMesh.h
diplom/misc/lic/: FStreamlineOnSurfaceEuler.cpp  FStreamlineOnSurfaceEuler.h  SurfaceLIC.cpp  TensorField.cpp  TensorField.h
diplom/misc/nifti/: nifti1_io.h  znzlib.c
diplom/nifti/: nifti1_io.c  nifti1_io.h  znzlib.h
diplom/scripts/: mk-osx-bundle.sh
src/: CMakeLists.txt  Log.cpp  Log.h  Logger.cpp  Logger.h  fnav  main.cpp  main.h  todo.txt
src/GLSL/: RTT.fs  RTT.vs  advection.vs  anatomy.fs  anatomy.vs  clipping.fs  crossing_fibers.fs  crossing_fibers.gs  crossing_fibers.vs  edgedetection.fs  fake-tubes.fs  fake-tubes.vs  fibers.fs  fibers.vs  functions.fs  graph.fs  graph.vs  legend.vs  lighting.fs  lighting.vs  mesh.fs  mesh.vs  odfs.fs  odfs.vs  splineSurf.fs  splineSurf.vs  tensors.fs  tensors.vs  transform.fs  transform.vs  vectors.vs
src/GLSL/ImplicitSurfaceGlyphs/: alex.cg  iarith.cg  iarith4.cg  iarith_unsafe.cg  param_ia_bisect.cg  raf1_float3.cg  raf1_float4.cg  raf2.cg  raf_float2.cg  raf_float3.cg  raf_float4.cg  raf_float8.cg
src/dataset/: Anatomy.cpp  Anatomy.h  AnatomyHelper.cpp  AnatomyHelper.h  DatasetHelper.cpp  DatasetHelper.h  DatasetIndex.h  DatasetInfo.cpp  DatasetInfo.h  DatasetInfo_.cpp  DatasetInfo_.h  DatasetManager.cpp  DatasetManager.h  Fibers.cpp  Fibers.h  FibersGroup.cpp  FibersGroup.h  Glyph.cpp  Glyph.h  KdTree.cpp  KdTree.h  Loader.h  Maximas.cpp  Maximas.h  Mesh.cpp  Mesh.h  Mesh_.cpp  Mesh_.h  ODFs.cpp  ODFs.h  Octree.cpp  Octree.h  RTFMRIHelper.cpp  RTFMRIHelper.h  RTTFibers.cpp  RTTFibers.h  RTTrackingHelper.cpp  RTTrackingHelper.h  RestingStateNetwork.cpp  RestingStateNetwork.h  (+20 more)
src/gfx/: Program.cpp  Program.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  Shader2.cpp  Shader2.h  ShaderHelper.cpp  ShaderHelper.h  ShaderProgram.cpp  ShaderProgram.h  TheScene.cpp  TheScene.h  TheScene_.h  theScene.cpp  theScene.h
src/gfx/ImplicitSurfaceGlyphs/: FFixArray.hh  FNumberingSystem.cpp  FNumberingSystem.h  (+18 more)
src/gui/: ArcBall.h  BoundingBox.cpp  BoundingBox.h  FMRIWindow.cpp  FMRIWindow.h  ListCtrl.cpp  ListCtrl.h  MainCanvas.cpp  MainCanvas.h  MainFrame.cpp  MainFrame.h  MainFrame_.cpp  MenuBar.cpp  MenuBar.h  MyListCtrl.cpp  MyListCtrl.h  PropertiesWindow.cpp  PropertiesWindow.h  PropertiesWindow_.cpp  SceneHelper.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  SelectionBox.cpp  SelectionBox.h  SelectionEllipsoid.cpp  SelectionEllipsoid.h  SelectionObject.cpp  SelectionObject.h  SelectionTree.cpp  SelectionTree.h  SelectionVOI.cpp  SelectionVOI.h  ToolBar.cpp  ToolBar.h  ToolBar_.cpp  ToolBar_.h  TrackingWindow.cpp  TrackingWindow.h  (+18 more)
src/icons/: alphablend.xpm  axial.xpm  axialw.xpm  background_color.xpm  box.xpm  box_eye.xpm  box_off.xpm  colorSelect.xpm  cor.xpm  corw.xpm  delete.xpm  disc.xpm  exp.xpm  eyes.xpm  glyph.xpm  grid.xpm  grid_spline.xpm  iso_surface.xpm  main.icns  mini_cat.xpm  new.xpm  quit.xpm  rulertool.xpm  rulertool_add.xpm  rulertool_clear.xpm  rulertool_del.xpm  sag.xpm  sagw.xpm  toggleselbox.xpm  tubes.xpm  view2.xpm
src/misc/: XmlHelper.cpp  XmlHelper.h
src/scripts/: ReadMe-OSX.txt  mk-osx-bundle.sh
src/version/: VersionString.cpp.in  VersionString.h
(+131 files in other folders)
